# backend/src/resources/auth/entity/user.entity.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class UserEntity {
+  @ApiProperty({})
+  id: string;
+
+  @ApiProperty({})
+  name: string;
+
+  @ApiProperty({})
+  username: string;
+}
